reworked agenda. bug fixes. added breadcrumb titles

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
   date:
     formats:
       long_dateweek: "%A, %B %d, %Y"
+      short_date_only: "%Y-%m-%d"
   time:
     formats:
       long_dateweek: "%A, %B %d, %Y %I:%M%p %Z"
